[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/components/config_slider.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/components/config_checkbox.gd" type="Script" id=2]
[ext_resource path="res://ui/components/inpaint_dialog.gd" type="Script" id=3]

[node name="InpaintDialog" type="WindowDialog"]
margin_right = 387.0
margin_bottom = 275.0
script = ExtResource( 3 )

[node name="HBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DenoisingStrenght" parent="HBoxContainer" instance=ExtResource( 1 )]
margin_right = 387.0
margin_bottom = 30.0
text = "DENOISING_STRENGTH"
max_value = 1.0
step = 0.05
default_value = 0.75
allow_decimals = true
requieres_flag = false
is_global_flag = false

[node name="MaskBlur" parent="HBoxContainer" groups=["advanced_ui"] instance=ExtResource( 1 )]
margin_top = 34.0
margin_right = 387.0
margin_bottom = 64.0
text = "MASK_BLUR"
min_value = 1.0
max_value = 64.0
default_value = 3.0
requieres_flag = false
is_global_flag = false

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
margin_top = 68.0
margin_right = 387.0
margin_bottom = 128.0
columns = 2

[node name="UseModifiers" type="CheckBox" parent="HBoxContainer/GridContainer" groups=["advanced_ui"]]
margin_right = 146.0
margin_bottom = 28.0
pressed = true
text = "USE_MODIFIERS"
script = ExtResource( 2 )
requieres_flag = false
is_global_flag = false

[node name="InvertMask" type="CheckBox" parent="HBoxContainer/GridContainer"]
margin_left = 150.0
margin_right = 264.0
margin_bottom = 28.0
text = "INVERT_MASK"
script = ExtResource( 2 )
requieres_flag = false
is_global_flag = false

[node name="InpaintFullRes" type="CheckBox" parent="HBoxContainer/GridContainer" groups=["advanced_ui"]]
margin_top = 32.0
margin_right = 146.0
margin_bottom = 60.0
pressed = true
text = "INPAINT_FULL_RES"
script = ExtResource( 2 )
requieres_flag = false
is_global_flag = false

[node name="Spacing" type="Control" parent="HBoxContainer"]
margin_top = 132.0
margin_right = 387.0
margin_bottom = 245.0
size_flags_vertical = 3

[node name="Generate" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 249.0
margin_top = 249.0
margin_right = 387.0
margin_bottom = 275.0
size_flags_horizontal = 8
text = "GENERATE_BUTTON"
